app/assets/stylesheets/mailer.css
body {
  width: 100% !important;
  height: 100%;
  margin: 0;
  -webkit-text-size-adjust: none;
}

a {
  color: #22c55e;
}

a img {
  border: none;
}

td {
  word-break: break-word;
}

.preheader {
  display: none !important;
  visibility: hidden;
  mso-hide: all;
  font-size: 1px;
  line-height: 1px;
  max-height: 0;
  max-width: 0;
  opacity: 0;
  overflow: hidden;
}

/* Type ------------------------------ */

body,
td,
th {
  font-family:
    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial,
    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

h1 {
  margin: 0 0 1.1875em 0;
  color: #333333;
  font-size: 30px;
  font-weight: 300;
  text-align: center;
}

h1.notice {
  background-color: #27ae60;
  border-top: 10px solid #27ae60;
  border-right: 18px solid #27ae60;
  border-bottom: 10px solid #27ae60;
  border-left: 18px solid #27ae60;
  color: #ffffff;
  text-decoration: none;
  border-radius: 3px;
  -webkit-text-size-adjust: none;
  box-sizing: border-box;
}

h1.warning {
  background-color: #f39c12;
  border-top: 10px solid #f39c12;
  border-right: 18px solid #f39c12;
  border-bottom: 10px solid #f39c12;
  border-left: 18px solid #f39c12;
  color: #ffffff;
  text-decoration: none;
  border-radius: 3px;
  -webkit-text-size-adjust: none;
  box-sizing: border-box;
}

h1.alert {
  background-color: #c0392b;
  border-top: 10px solid #c0392b;
  border-right: 18px solid #c0392b;
  border-bottom: 10px solid #c0392b;
  border-left: 18px solid #c0392b;
  color: #ffffff;
  text-decoration: none;
  border-radius: 3px;
  -webkit-text-size-adjust: none;
  box-sizing: border-box;
}

h2 {
  margin-top: 2em;
}

h2,
.trix-content h1 {
  color: #444444;
  font-size: 20px;
  font-weight: 400;
  text-align: left;
}

h3 {
  margin-top: 0;
  color: #333333;
  font-size: 14px;
  font-weight: bold;
  text-align: left;
}

td,
th {
  font-size: 16px;
}

p,
ul,
ol,
blockquote {
  font-size: 16px;
  line-height: 1.4;
}

p {
  margin: 1.2em 0 0.4em 0;
}

blockquote {
  margin: 0.8em 0;
}

ol,
ul {
  margin: 0.4em 0 1.2em 0;
}

ul li {
  list-style: disc outside none;
  margin-bottom: 0.25em;
}

ol li {
  list-style: decimal outside none;
}

p.sub {
  font-size: 13px;
}

p.closing {
  margin-top: 30px;
  margin-bottom: 0;
}

/* Utilities ------------------------------ */

.align-right {
  text-align: right;
}

.align-left {
  text-align: left;
}

.align-center {
  text-align: center;
}

/* Buttons ------------------------------ */

.button {
  background-color: #3869d4;
  border-top: 10px solid #3869d4;
  border-right: 18px solid #3869d4;
  border-bottom: 10px solid #3869d4;
  border-left: 18px solid #3869d4;
  display: inline-block;
  color: #fff;
  text-decoration: none;
  border-radius: 3px;
  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.16);
  -webkit-text-size-adjust: none;
  box-sizing: border-box;
}

.button--green {
  background-color: #22c55e;
  border-top: 10px solid #22c55e;
  border-right: 18px solid #22c55e;
  border-bottom: 10px solid #22c55e;
  border-left: 18px solid #22c55e;
}

.button--red {
  background-color: #ff6136;
  border-top: 10px solid #ff6136;
  border-right: 18px solid #ff6136;
  border-bottom: 10px solid #ff6136;
  border-left: 18px solid #ff6136;
}

@media only screen and (max-width: 500px) {
  .button {
    width: 100% !important;
    text-align: center !important;
  }
}

/* Attribute list ------------------------------ */

.attributes {
  margin: 0 0 21px;
}

.spaced {
  padding: 16px 0;
}

.attributes_highlight {
  background-color: #f4f4f7;
  padding: 16px;
}

.attributes_item {
  padding: 0;
}

.attributes_lowlight {
  background: none;
  border: solid 1px #dddddd;
  border-width: 1px 0;
  height: 1px;
  width: 100%;
  margin: 0;
  padding: 0.7875em 0 0 0;
}

.attributes_lowlight p,
.attributes_lowlight span,
.attributes_lowlight li {
  color: #888888;
  font-size: 12px;
  font-style: italic;
  padding: 0;
}

/* Related Items ------------------------------ */

.related {
  width: 100%;
  margin: 0;
  padding: 25px 0 0 0;
  -premailer-width: 100%;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
}

.related_item {
  padding: 10px 0;
  color: #cbcccf;
  font-size: 15px;
  line-height: 18px;
}

.related_item-title {
  display: block;
  margin: 0.5em 0 0;
}

.related_item-thumb {
  display: block;
  padding-bottom: 10px;
}

.related_heading {
  border-top: 1px solid #cbcccf;
  text-align: center;
  padding: 25px 0 10px;
}

/* Discount Code ------------------------------ */

.discount {
  width: 100%;
  margin: 0;
  padding: 24px;
  -premailer-width: 100%;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
  background-color: #f4f4f7;
  border: 2px dashed #cbcccf;
}

.discount_heading {
  text-align: center;
}

.discount_body {
  text-align: center;
  font-size: 15px;
}

/* Social Icons ------------------------------ */

.social {
  width: auto;
}

.social td {
  padding: 0;
  width: auto;
}

.social_icon {
  height: 20px;
  margin: 0 8px 10px 8px;
  padding: 0;
}

/* Data table ------------------------------ */

.purchase {
  width: 100%;
  margin: 0;
  padding: 35px 0;
  -premailer-width: 100%;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
}

.purchase_content {
  width: 100%;
  margin: 0;
  padding: 25px 0 0 0;
  -premailer-width: 100%;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
}

.purchase_item {
  padding: 10px 0;
  color: #51545e;
  font-size: 15px;
  line-height: 18px;
}

.purchase_heading {
  padding-bottom: 8px;
  border-bottom: 1px solid #eaeaec;
}

.purchase_heading p {
  margin: 0;
  color: #85878e;
  font-size: 12px;
}

.purchase_footer {
  padding-top: 15px;
  border-top: 1px solid #eaeaec;
}

.purchase_total {
  margin: 0;
  text-align: right;
  font-weight: bold;
  color: #333333;
}

.purchase_total--label {
  padding: 0 15px 0 0;
}

body {
  background-color: #ffffff;
  color: #51545e;
}

p {
  color: #51545e;
}

.email-wrapper {
  width: 100%;
  margin: 0;
  padding: 0;
  -premailer-width: 100%;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
  background-color: #ffffff;
}

.email-content {
  width: 100%;
  margin: 0;
  padding: 0;
  -premailer-width: 100%;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
}

/* Masthead ----------------------- */

.email-masthead {
  padding: 25px 0;
  text-align: center;
}

.email-masthead img {
  width: 100px;
  height: 100px;
}

/* Body ------------------------------ */

.email-body {
  width: 100%;
  margin: 0;
  padding: 0;
  -premailer-width: 100%;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
}

.email-body_inner {
  width: 570px;
  margin: 0 auto;
  padding: 0;
  -premailer-width: 570px;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
  background-color: #faf8f7;
}

.email-footer {
  width: 570px;
  margin: 0 auto;
  padding: 0;
  -premailer-width: 570px;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
  text-align: center;
}

.email-footer p {
  color: #a8aaaf;
}

.email-footer a {
  color: #aaaaaa;
}

.email-footer p.app {
  margin-top: 40px;
}

.email-footer .social-network a {
  margin: 0 5px;
  text-decoration: none;
}

.body-action {
  width: 100%;
  margin: 30px auto;
  padding: 0;
  -premailer-width: 100%;
  -premailer-cellpadding: 0;
  -premailer-cellspacing: 0;
  text-align: center;
}

.body-sub {
  margin-top: 25px;
  padding-top: 25px;
  border-top: 1px solid #eaeaec;
}

.content-cell {
  padding: 45px;
}

.content-block {
  margin: 20px auto;
}

.content-block h2,
.trix-content h1 {
  margin-bottom: 10px;
}

.trix-content {
  line-height: 1.5;
  margin: 0.4em 0 1.1875em;
}
.trix-content a {
  color: #22c55e;
  text-decoration: underline;
  text-underline-offset: 2px;
}
.trix-content figure {
  margin: 0.5em 0;
}
.trix-content * {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
.trix-content blockquote {
  border: 0 solid #ccc;
  border-left-width: 0.3em;
  margin-left: 0.3em;
  padding-left: 0.6em;
}
.trix-content [dir="rtl"] blockquote,
.trix-content blockquote[dir="rtl"] {
  border-width: 0;
  border-right-width: 0.3em;
  margin-right: 0.3em;
  padding-right: 0.6em;
}
.trix-content ul,
.trix-content ol {
  margin: 0.4em 0;
}
.trix-content li {
  margin-left: 1.6em;
}
.trix-content [dir="rtl"] li {
  margin-right: 1.6em;
}
.trix-content pre {
  display: inline-block;
  width: 100%;
  vertical-align: top;
  font-family: monospace;
  font-size: 0.9em;
  padding: 0.5em;
  white-space: pre;
  background-color: #eee;
  overflow-x: auto;
}
.trix-content img {
  max-width: 100%;
  height: auto;
}
.trix-content .attachment {
  margin: 16px 0;
  display: inline-block;
  position: relative;
  max-width: 100%;
}
.trix-content .attachment a {
  color: inherit;
  text-decoration: none;
}
.trix-content .attachment a:hover,
.trix-content .attachment a:visited:hover {
  color: inherit;
}
.trix-content .attachment--preview {
  width: 100%;
  text-align: center;
}
.trix-content .attachment--preview .attachment__caption {
  color: #666;
  font-size: 0.9em;
  line-height: 1.2;
}
.trix-content .attachment--file {
  color: #333;
  line-height: 1;
  margin: 0 2px 2px 2px;
  padding: 0.4em 1em;
  border: 1px solid #bbb;
  border-radius: 5px;
}
.trix-content .attachment-gallery {
  margin: 16px 0;
  position: relative;
}
.trix-content .attachment-gallery .attachment {
  margin: auto;
  padding: 0 0.5em;
  max-width: 33%;
}
.trix-content .attachment-gallery.attachment-gallery--2 .attachment,
.trix-content .attachment-gallery.attachment-gallery--4 .attachment {
  margin: auto;
  max-width: 50%;
}

/*Media Queries ------------------------------ */

@media only screen and (max-width: 600px) {
  .email-body_inner,
  .email-footer {
    width: 100% !important;
  }

  .content-cell {
    padding: 25px !important;
  }

  .attributes_highlight {
    padding: 6px !important;
  }
}

@media (prefers-color-scheme: dark) {
  body,
  .email-body,
  .email-body_inner,
  .email-content,
  .email-wrapper,
  .email-masthead,
  .email-footer {
    background-color: #000000 !important;
    color: #eee !important;
  }

  .email-body_inner {
    background-color: #333333 !important;
  }

  p,
  ul,
  ol,
  blockquote,
  h1,
  h2,
  h3 {
    color: #eee !important;
  }

  .email-masthead img {
    filter: invert(1) hue-rotate(180deg) !important;
  }

  .attributes_highlight,
  .discount {
    background-color: #222 !important;
  }

  .email-masthead_name {
    text-shadow: none !important;
  }
}

body.dark,
body.dark .email-body,
body.dark .email-body_inner,
body.dark .email-content,
body.dark .email-wrapper,
body.dark .email-masthead,
body.dark .email-footer {
  background-color: #000000 !important;
  color: #eee !important;
}

body.dark .email-body_inner {
  background-color: #333333 !important;
}

body.dark p,
body.dark ul,
body.dark ol,
body.dark blockquote,
body.dark h1,
body.dark h2,
body.dark h3 {
  color: #eee !important;
}

body.dark .email-masthead img {
  filter: invert(1) hue-rotate(180deg) !important;
}

body.dark .attributes_highlight,
body.dark .discount {
  background-color: #222 !important;
}

body.dark .email-masthead_name {
  text-shadow: none !important;
}

